# DampeDataCatalog

./: .project  .pydevproject  README.md  __init__.py  setup.cfg  update.sh
DampeDataCatalog/: __init__.py
DampeDataCatalog/core/: __init__.py  admin.py  manage.py  models.py  views.py
DampeDataCatalog/core/templates/: base.html
DampeDataCatalog/core/templates/admin/: base.html
DampeDataCatalog/core/templates/files/: dataset.html  detail.html  info.html  list.html
DampeDataCatalog/scripts/: query.py  registerDS.py  update.py
DampeDataCatalog/utils/: logger.py  tools.py
core/: __init__.py  admin.py  models.py
core/templates/files/: detail.html
utils/: tools.py
