[metadata]
name = DampeDataCatalog
summary = Data File Catalog for DAMPE
author = Stephan Zimmer (University of Geneva)
author-email = zimmer@cern.ch
description-file = README.md
license = BSD
classifier =
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
keywords = DampeWorkflow

[files]
packages = 
	DampeDataCatalog

[entry_points]
console_scripts =
    ## client-side scripts
#    dampe-cli-configure = DmpWorkflow.scripts.dampe_cli_configure:main
##    dampe-cli-create-new-job = DmpWorkflow.scripts.dampe_cli_create_new_job:main
#    dampe-cli-create-new-jobInstance = DmpWorkflow.scripts.dampe_cli_create_new_jobInstance:main
#    dampe-cli-fetch-new-jobs = DmpWorkflow.scripts.dampe_cli_fetch_new_jobs:main#
#	dampe-cli-rollback-jobInstance = DmpWorkflow.scripts.dampe_cli_rollback_jobInstance:main
#    dampe-cli-update-job-status = DmpWorkflow.scripts.dampe_cli_update_job_status:main#
#	dampe-datacatalog = DmpWorkflow.scripts.datacatalog_cli:main
#    ## server side scripts
    dampe-dfc-server-admin = DampeDataCatalog.core.manage:main
    