[metadata]
name = DampeDataCatalog
summary = Data File Catalog for DAMPE
author = Stephan Zimmer (University of Geneva)
author-email = zimmer@cern.ch
description-file = README.md
license = BSD
classifier =
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
keywords = DampeWorkflow

[files]
packages = 
	DampeDataCatalog

[entry_points]
console_scripts =
    ## client-side scripts
	dampe-dfc-register = DampeDataCatalog.scripts.registerDS:main
	dampe-dfc-query = DampeDataCatalog.scripts.query:main
	dampe-dfc-update = DampeDataCatalog.scripts.update:main
#    ## server side scripts
    dampe-dfc-server-admin = DampeDataCatalog.core.manage:main
    